@@ -1855,7 +1855,7 @@ public abstract class SSTableReader extends SSTable implements SelfRefCounted<SS
             // this saves index summary lookup and index file iteration which whould be pretty costly
             // especially in presence of promoted column indexes
             if (isKeyCacheEnabled())
-                cacheKey(key, rowIndexEntrySerializer.deserialize(in, in.getFilePointer()));
+                cacheKey(key, rowIndexEntrySerializer.deserialize(in));
         }
 
         return key;
