@@ -1,4 +1,5 @@
 4.0-alpha4
+ * Cleanup and improvements to IndexInfo/ColumnIndex (CASSANDRA-15469)
  * Potential Overflow in DatabaseDescriptor Functions That Convert Between KB/MB & Bytes (CASSANDRA-15470)
 4.0-alpha3
  * Restore monotonic read consistency guarantees for blocking read repair (CASSANDRA-14740)
